roles executes partially

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Prevent caching of protected pages to avoid BFCache showing stale views -->
+    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <title>MediVision - AI-Powered Chest X-ray Diagnosis</title>
     <meta name="description" content="Advanced multimodal AI platform for real-time chest X-ray analysis and diagnosis. Combining GPT-4o, MedSAM, and specialized medical models for accurate diagnostic insights." />
     <meta name="author" content="MediVision" />
